<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/colorPrimaryDark"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:focusableInTouchMode="true"
              tools:context="com.code_dream.almanach.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:background="@color/colorPrimary"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="150dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/colorLightGrayText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"/>

                <EditText
                    android:id="@+id/password"
                    android:textColor="@color/colorWhiteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:paddingTop="30dp"
                    android:hint="@string/prompt_password"
                    android:textColorHint="@color/colorLightGrayText"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:background="@color/colorAccent"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/colorWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="RegisterClick"
                android:clickable="true"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/colorGrayText"
                android:textSize="18sp"
                android:text="@string/register"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
